gatekeeper/policies/required-labels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: all-must-have-owner
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
  parameters:
    message: "`component` label must be defined"
    labels:
      - key: component
        allowedRegex: "*"
